--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>James Acree | Projects & Research</title>
+  <title>James Acree | Build Above the Noise</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="James Acree — student-athlete, researcher, and founder building Tactical Thermals and Common Pitch." />
+  <meta name="description" content="James Acree — student-athlete, researcher & founder building Tactical Thermals and Common Pitch. Exploring how environment, data & discipline shape modern sport." />
+
+  <!-- Open Graph / Social Meta -->
+  <meta property="og:title" content="James Acree | Build Above the Noise" />
+  <meta property="og:description" content="Student-athlete, researcher & founder exploring how environment, data & discipline shape modern sport." />
+  <meta property="og:image" content="https://jamesacree.github.io/jaa3_logo.png" />
+  <meta property="og:url" content="https://jamesacree.github.io/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="James Acree | Build Above the Noise" />
+  <meta name="twitter:description" content="Student-athlete, researcher & founder exploring how environment, data & discipline shape modern sport." />
+  <meta name="twitter:image" content="https://jamesacree.github.io/jaa3_logo.png" />
+
   <style>
     :root {
       --bg: #050814;
@@ -20,7 +31,7 @@
       padding: 0;
     }
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, -webkit-system-font, -system-font, -apple-system, BlinkMacSystemFont, "SF Pro Text", -sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, -webkit-system-font, "SF Pro Text", sans-serif;
       background: radial-gradient(circle at top, #151a33, var(--bg));
       color: var(--text);
       min-height: 100vh;
@@ -55,7 +66,7 @@
       width: 40px;
       height: 40px;
       border-radius: 999px;
-      background: #0b1430;
+      background: #0b1430 url('jaa3_logo.png') center/contain no-repeat;
       border: 1px solid rgba(255,255,255,0.14);
       display: flex;
       align-items: center;
@@ -138,9 +149,9 @@
   <main class="wrap">
     <div class="tag">James Acree · Projects & Research</div>
     <div class="top">
-      <div class="logo">JAA3</div>
+      <div class="logo"></div>
       <div>
-        <h1>Building in public.</h1>
+        <h1>Build Above the Noise.</h1>
         <div class="subtitle">Student-athlete, researcher & founder exploring how environment, data & discipline shape modern sport.</div>
       </div>
     </div>
@@ -179,3 +190,4 @@
   </main>
 </body>
 </html>
+
