--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       padding: 0;
     }
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, -webkit-system-font, "SF Pro Text", sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text", sans-serif;
       background: radial-gradient(circle at top, #151a33, var(--bg));
       color: var(--text);
       min-height: 100vh;
@@ -68,13 +68,6 @@
       border-radius: 999px;
       background: #0b1430 url('jaa3_logo.png') center/contain no-repeat;
       border: 1px solid rgba(255,255,255,0.14);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: 700;
-      font-size: 14px;
-      letter-spacing: 0.05em;
-      color: var(--accent);
       margin-right: 10px;
     }
     .top {
@@ -152,13 +145,15 @@
       <div class="logo"></div>
       <div>
         <h1>Build Above the Noise.</h1>
-        <div class="subtitle">Student-athlete, researcher & founder exploring how environment, data & discipline shape modern sport.</div>
+        <div class="subtitle">
+          Student-athlete, researcher & founder exploring how environment, data & discipline shape modern sport.
+        </div>
       </div>
     </div>
 
     <p class="blurb">
       This GitHub space hosts my technical work — including
-      <strong>Tactical Thermals</strong>, a research project on how heat, altitude, and air quality disrupt tactics and performance in elite football, and the code, data, and experiments that follow.
+      <strong>Tactical Thermals</strong>, a research project on how heat, altitude, and air quality disrupt tactics and performance in elite football — plus the code, data, and documents that keep my work transparent and verifiable.
     </p>
 
     <section class="links">
@@ -181,6 +176,11 @@
         <span class="label">tacticalthermals.com ↗</span>
         The broader Tactical Thermals project & platform.
       </a>
+
+      <a class="link-card" href="https://github.com/jamesacree/Certificates_and_Verifications_2023-2025" target="_blank" rel="noopener">
+        <span class="label">Certificates & Verifications ↗</span>
+        Verified academic, technical, and coaching credentials (Harvard, CFA, Palantir, YC, EE Playermaker).
+      </a>
     </section>
 
     <div class="small">
@@ -190,4 +190,3 @@
   </main>
 </body>
 </html>
-
